--- a/assets/app.css
+++ b/assets/app.css
@@ -99,9 +99,16 @@
      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-.graph_container {
+.graph__container {
     border: 1px solid #DCDCDC;
     margin-top: 20px;
     margin: 20px;
     padding: 15px;
 }
+
+.app__footer {
+    margin: 20px;
+    font-family: sans-serif;
+    font-size: 12px;
+}
+
